2008-12-21  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_write_object): callback-based writer/printer

2008-12-17  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c: dfsch_assert type and assert_instance 

2008-12-16  Ales Hakl  <ales at hakl dot net>

	* lib/cdebug.c (prettyprint_condition_fields): print condition
	fields in debugger

	* dfsch/lib/cdebug.h: synchronized declarations with actual
	contents of cdebug.c (this inconsistency was real cause of losage
	on amd64)

2008-12-09  Ales Hakl  <ales at hakl dot net>

	* lib/collections.c: priority queue type

2008-12-02  Ales Hakl  <ales at hakl dot net>

	* src/ports.c (dfsch_port_read_whole): port-read-whole function

	* src/object.c (make_slots): set slot accessibility correctly

2008-11-30  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_sort_list): destructive sorting of list

	* src/number.c (dfsch_number_to_inexact): explicit conversion to
	inexact number

	* src/bignum.c (dfsch_bignum_to_double): fix broken bignum->flonum
	conversion

	* src/conditions.c (dfsch__condition_write): do not print stack-trace

	* Makefile.am: removed generic function subsystem

2008-11-29  Ales Hakl  <ales at hakl dot net>

	* src/object.c: reasonable mesasage-passing based object system
	(which generally seems like better idea than some half-assed
	attempt at CLOS)

2008-11-28  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_eval_impl): note evaluated expressions correctly
	added slots to some types

2008-11-26  Ales Hakl  <ales at hakl dot net>

	* doc/type-hierarchy: some incomplete chart

	* src/repl.c (main): fixed expression evaluation code

2008-11-25  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_obj_write): inherit display function

2008-11-24  Ales Hakl  <ales at hakl dot net>

	* src/native.c: access to slots from LISP-code

	* src/dfsch.c: basic slot accessors and related C-level API 

2008-11-19  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c: meta-type class 
